# debuggable-cmake-example

./: LICENSE  README.md
app/: build.gradle
app/src/androidTest/java/com/example/debuggablecmakeexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/debuggablecmakeexample/: MainActivity.java  OpenGLActivity.java
app/src/main/res/layout/: activity_main.xml  activity_open_gl.xml
app/src/main/res/layout-land/: activity_open_gl.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/debuggablecmakeexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
my-native-submodule/: CMakeLists.txt  NativeSubmodule.cpp  NativeSubmodule.h
mylibrary/: CMakeLists.txt  build.gradle  proguard-rules.pro
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: my-native-lib.cpp
mylibrary/src/main/java/com/example/mylibrary/: MyLibraryManager.java
